--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -5,6 +5,7 @@ footer{
     margin-top: 2rem;
     width: 100%;
     height: auto;
+    overflow: hidden;
     .fa-instagram {
         @include redes ($ig);
     }
