--- a/scss/layout/_niños.scss
+++ b/scss/layout/_niños.scss
@@ -1,7 +1,6 @@
-.bniñxs{
-    @extend .bniñxs ;
- 
- } 
+.bninxs{
+   @extend .bninxs ;
+}
     .titulo_niños {
      font-size: 4rem;
      font-family: $fontComfortaa;
