--- a/scss/layout/niñas.scss
+++ b/scss/layout/niñas.scss
@@ -1,16 +1,17 @@
 .bniñxs{
     background-image: url("../imagenes/fondo\ de\ mi\ proyecto.webp");
     background-size: cover;
-    height: 100vh;
-    display: grid;
-  } 
+    height: 100vh; 
+    overflow: hidden;
+    } 
+
    .titulo_ellas {
     font-size: 4rem;
-    font-family: $fontComfortaa;
+    font-family: $fontUbuntu;
     width: 100%;
     transition: 1s;
     transition-property: all;
-    transition-timing-function: ease-in-out;  
+    transition-timing-function: ease-in-out;   
     color: map-get($mapa, $key:fondo2 );
  } 
 
@@ -22,8 +23,7 @@
    border-radius: 4px;
    padding: 5px;
    width: 350px;
-   
- }
+   }
  
  .img_niñex:hover {
    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
