--- a/scss/layout/_nosotros.scss
+++ b/scss/layout/_nosotros.scss
@@ -1,7 +1,7 @@
 .bnosotros{
     background-color: bisque;
     height: 100vh;
-    overflow: hidden;
+    overflow: auto;
           .texto_historia {
         font-size: 1.3rem;
     }
