--- a/scss/layout/niñas.scss
+++ b/scss/layout/niñas.scss
@@ -2,7 +2,7 @@
     background-image: url("../imagenes/fondo\ de\ mi\ proyecto.webp");
     background-size: cover;
     height: 100vh; 
-    overflow: hidden;
+    overflow: auto;
     } 
 
    .titulo_ellas {
