--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -23,7 +23,7 @@
 .bindex {
   background-image: url("../imagenes/fondo de mi proyecto.webp");
   background-size: cover;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .titulo_bienvenida, .bmenu article .parrafo, .bmenu article .titulo {
@@ -44,7 +44,7 @@
   background-image: url("../imagenes/fondo de mi proyecto.webp");
   background-size: cover;
   height: 100vh;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .titulo_ellas {
@@ -93,7 +93,7 @@
 .bnosotros {
   background-color: bisque;
   height: 100vh;
-  overflow: hidden;
+  overflow: auto;
 }
 .bnosotros .texto_historia {
   font-size: 1.3rem;
@@ -112,7 +112,7 @@
 .bmenu {
   height: 100vh;
   background-image: url("../imagenes/fc.png");
-  overflow: hidden;
+  overflow: auto;
 }
 .bmenu .parrafo:hover {
   background-color: beige;
@@ -142,7 +142,7 @@ footer {
   margin-top: 2rem;
   width: 100%;
   height: auto;
-  overflow: hidden;
+  overflow: auto;
 }
 footer .fa-instagram {
   font-size: 2rem;
