--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -5,7 +5,7 @@ footer{
     margin-top: 2rem;
     width: 100%;
     height: auto;
-    overflow: hidden;
+    overflow: auto;
     .fa-instagram {
         @include redes ($ig);
     }
