--- a/scss/layout/_contacto.scss
+++ b/scss/layout/_contacto.scss
@@ -1,7 +1,6 @@
 .bmenu {
-    height: 100vh;
-    
     background-image: url("../imagenes/fc.png");
+    background-size: cover;
  
     article {
         .titulo {
