--- a/scss/partials/_mediaform.scss
+++ b/scss/partials/_mediaform.scss
@@ -5,7 +5,7 @@
        padding-top: 15px;
 }
 .bmenu{
-   background: lightsalmon;
+   background: lightblue;
  }
     footer {
       padding-top: 3rem;
