--- a/scss/layout/niñas.scss
+++ b/scss/layout/niñas.scss
@@ -1,6 +1,7 @@
 .bniñxs{
     background-image: url("../imagenes/fondo\ de\ mi\ proyecto.webp");
     background-size: cover;
+    width:100vw ;
    }  
 
    .titulo_ellas {
