--- a/scss/layout/niñas.scss
+++ b/scss/layout/niñas.scss
@@ -1,11 +1,11 @@
 .bniñxs{
-    background-image: url("../imagenes/fondo\ de\ mi\ proyecto.webp");
-    background-size: cover;
+    background-color: pink;
     overflow: auto;
+    width:100wh ;
    }  
 
    .titulo_ellas {
-    font-size: 4rem;
+    font-size: 4rem; 
     font-family: $fontUbuntu;
     width: 100%;
     transition: 1s;
