--- a/scss/layout/niñas.scss
+++ b/scss/layout/niñas.scss
@@ -1,7 +1,6 @@
 .bniñxs{
-    background-color: pink;
-    overflow: auto;
-    width:100wh ;
+   background-image: url("../imagenes/fondo\ de\ mi\ proyecto.webp");
+    background-size: cover;
    }  
 
    .titulo_ellas {
