--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -23,7 +23,6 @@
 .bindex {
   background-image: url("../imagenes/fondo de mi proyecto.webp");
   background-size: cover;
-  width: 100vw;
 }
 
 .titulo_bienvenida, .bmenu article .parrafo, .bmenu article .titulo {
@@ -41,9 +40,8 @@
 }
 
 .bniñxs {
-  background-color: pink;
-  overflow: auto;
-  width: 100wh;
+  background-image: url("../imagenes/fondo de mi proyecto.webp");
+  background-size: cover;
 }
 
 .titulo_ellas {
