--- a/scss/layout/_niños.scss
+++ b/scss/layout/_niños.scss
@@ -1,5 +1,6 @@
-.bninxs{
-   @extend .bninxs ;
+.bniños{
+   background-image: url("../imagenes/fondo\ de\ mi\ proyecto.webp");
+   background-size: cover;;
 }
     .titulo_niños {
      font-size: 4rem;
