--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -39,7 +39,7 @@
   background-color: white;
 }
 
-.bniñxs {
+.bniñas {
   background-image: url("../imagenes/fondo de mi proyecto.webp");
   background-size: cover;
 }
@@ -67,6 +67,11 @@
 
 .img_niñex:hover {
   box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+
+.bniños {
+  background-image: url("../imagenes/fondo de mi proyecto.webp");
+  background-size: cover;
 }
 
 .titulo_niños {
@@ -172,5 +177,29 @@ footer .fa-facebook:hover {
   }
   footer {
     padding-top: 3rem;
+  }
+}
+@media (max-width: 576px) {
+  .bindex {
+    background: lightblue;
+  }
+}
+@media (max-width: 576px) {
+  .bniñas {
+    background: pink;
+  }
+}
+.titulo_ellas {
+  background: white;
+}
+
+@media (max-width: 576px) {
+  .bniños {
+    background: rgb(99, 99, 223);
+  }
+}
+@media (min-width: 768px) {
+  .titulo_ellas {
+    background: none;
   }
 }/*# sourceMappingURL=estilos.css.map */
