--- a/scss/layout/niñas.scss
+++ b/scss/layout/niñas.scss
@@ -1,20 +1,19 @@
-.bniñxs{
+.bniñas{
    background-image: url("../imagenes/fondo\ de\ mi\ proyecto.webp");
     background-size: cover;
  }
    .titulo_ellas {
     font-size: 4rem; 
-    font-family: $fontUbuntu;
+    font-family: $fontUbuntu; 
     width: 100%;
     transition: 1s;
     transition-property: all;
     transition-timing-function: ease-in-out;   
     color: map-get($mapa, $key:fondo2 );
  } 
-
- .titulo_ellas:hover{
-   background-color: white ;
- }
+.titulo_ellas:hover{
+  background-color: white;
+}
 
 .img_niñex {border: 1px solid #ddd;
    border-radius: 4px;
