--- a/scss/partials/_medias.scss
+++ b/scss/partials/_medias.scss
@@ -1,25 +1,33 @@
 @media (max-width:576px) {
     .bindex {
-       background: lightblue;
+        background: lightblue;
     }
-    
+
 }
+
 @media (max-width:576px) {
     .bniñas {
-       background: pink;
+        background: pink;
     }
-} 
-.titulo_ellas{
+}
+
+.titulo_ellas {
     background: white;
 }
+
 @media (max-width:576px) {
     .bniños {
-       background: rgb(99, 99, 223);
+        background: lightblue;
     }
-} 
-@media (min-width: 768px) { 
-    .titulo_ellas{
+
+    .titulo_niños {
+        background: white;
+    }
+}
+
+@media (min-width: 768px) {
+    .titulo_ellas {
         background: none;
-        
+
     }
 }
