--- a/scss/layout/_nosotros.scss
+++ b/scss/layout/_nosotros.scss
@@ -1,19 +1,22 @@
-.bnosotros{
-    background-color: bisque;
-    
-   
-   
-          .texto_historia {
-        font-size: 1.3rem;
-    }
-          .texto_historia:hover{
-        width: 100%;
-        background-color: white;
-        transition: 1s;
-        transition-property: all;
-        transition-timing-function: ease-in-out;
-    }
-    p:hover {
-        background-color: beige}
-    
+.bnosotros {
+  background-color: bisque;
+
+
+
+  .texto_historia {
+    font-size: 1.3rem;
+  }
+
+  .texto_historia:hover {
+    width: 100%;
+    background-color: white;
+    transition: 1s;
+    transition-property: all;
+    transition-timing-function: ease-in-out;
+  }
+
+  p:hover {
+    background-color: beige
+  }
+
 }
