--- a/scss/layout/niñas.scss
+++ b/scss/layout/niñas.scss
@@ -1,26 +1,29 @@
-.bniñas{
-   background-image: url("../imagenes/fondo\ de\ mi\ proyecto.webp");
-    background-size: cover;
- }
-   .titulo_ellas {
-    font-size: 4rem; 
-    font-family: $fontUbuntu; 
-    width: 100%;
-    transition: 1s;
-    transition-property: all;
-    transition-timing-function: ease-in-out;   
-    color: map-get($mapa, $key:fondo2 );
- } 
-.titulo_ellas:hover{
+.bniñas {
+  background-image: url("../imagenes/fondo\ de\ mi\ proyecto.webp");
+  background-size: cover;
+}
+
+.titulo_ellas {
+  font-size: 4rem;
+  font-family: $fontUbuntu;
+  width: 100%;
+  transition: 1s;
+  transition-property: all;
+  transition-timing-function: ease-in-out;
+  color: map-get($mapa, $key: fondo2);
+}
+
+.titulo_ellas:hover {
   background-color: white;
 }
 
-.img_niñex {border: 1px solid #ddd;
-   border-radius: 4px;
-   padding: 5px;
-   width: 350px;
-   }
- 
- .img_niñex:hover {
-   box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
- }
+.img_niñex {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 350px;
+}
+
+.img_niñex:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
