--- a/scss/partials/_maps.scss
+++ b/scss/partials/_maps.scss
@@ -1,11 +1,13 @@
 $mapa: (
     fondo:lightblue,
-    fondo2: pink ,
+    fondo2: pink,
     fondo3: #040529,
 );
-@each $fondo, $color in $mapa {
+
+@each $fondo,
+$color in $mapa {
     .card--#{$fondo} {
         background-color: $color;
     }
-    
+
 }
