--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -2,6 +2,7 @@
 @import "./partials/mixin";
 @import "./partials/reset" ;
 @import"./partials/maps";
+@import "./layout/navbar";
 @import"./layout/index";
 @import"./layout/niñas";
 @import"./layout/niños";
