--- a/scss/layout/_nosotros.scss
+++ b/scss/layout/_nosotros.scss
@@ -1,7 +1,8 @@
 .bnosotros {
   background-color: bisque;
-
-
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 3rem;
 
   .texto_historia {
     font-size: 1.3rem;
