--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -20,9 +20,17 @@
   background-color: #040529;
 }
 
+.navbar {
+  background-color: white;
+  max-width: 100vw;
+  max-height: 30vh;
+}
+
 .bindex {
-  background-image: url("../imagenes/fondo de mi proyecto.webp");
-  background-size: cover;
+  background-color: lightgray;
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 3rem;
 }
 
 .titulo_bienvenida, .bmenu article .parrafo, .bmenu article .titulo {
@@ -40,8 +48,10 @@
 }
 
 .bniñas {
-  background-image: url("../imagenes/fondo de mi proyecto.webp");
-  background-size: cover;
+  background-color: lightgray;
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 3rem;
 }
 
 .titulo_ellas {
@@ -58,20 +68,11 @@
   background-color: white;
 }
 
-.img_niñex {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 5px;
-  width: 350px;
-}
-
-.img_niñex:hover {
-  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
-}
-
 .bniños {
-  background-image: url("../imagenes/fondo de mi proyecto.webp");
-  background-size: cover;
+  background-color: lightgray;
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 3rem;
 }
 
 .titulo_niños {
@@ -85,15 +86,14 @@
 }
 
 .titulo_niños:hover {
-  background-color: rgb(194, 71, 71);
-}
-
-.img_niñxs:hover {
-  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+  background-color: lightgray;
 }
 
 .bnosotros {
   background-color: bisque;
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 3rem;
 }
 .bnosotros .texto_historia {
   font-size: 1.3rem;
@@ -110,9 +110,10 @@
 }
 
 .bmenu {
-  background-image: url("../imagenes/fc.png");
-  background-size: cover;
-  width: 100vw;
+  background-color: lightblue;
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 3rem;
 }
 .bmenu .parrafo:hover {
   background-color: beige;
@@ -123,6 +124,7 @@
 .bmenu form {
   background-color: white;
   padding: 40px;
+  padding-bottom: 1rem;
   box-shadow: 0 0 6px 0 rgba(55, 55, 55, 0.8);
   border-radius: 10px;
 }
@@ -136,11 +138,12 @@
 }
 
 footer {
-  background-color: whitesmoke;
+  background-color: white;
   padding-top: 1rem;
-  padding-bottom: 1rem;
   margin-top: 2rem;
   width: 100%;
+  position: absolute;
+  bottom: 0;
 }
 footer .fa-instagram {
   font-size: 2rem;
@@ -180,13 +183,21 @@ footer .fa-facebook:hover {
   }
 }
 @media (min-width: 768px) {
+  .bindex {
+    background: lightgray;
+  }
+  img {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) {
   .titulo_ellas {
     background: none;
   }
 }
 @media (max-width: 576px) {
   .bindex {
-    background: lightblue;
+    background: lightgray;
   }
 }
 @media (max-width: 576px) {
