--- a/scss/layout/_contacto.scss
+++ b/scss/layout/_contacto.scss
@@ -1,7 +1,10 @@
 .bmenu {
-    background-image: url("../imagenes/fc.png");
-    background-size: cover;
-    width: 100vw;
+    background-color: lightblue;
+ min-height: 100vh;
+ position: relative;
+ padding-bottom: 3rem;
+ 
+
     article {
         .titulo {
          @extend .titulo_bienvenida ; 
@@ -23,6 +26,7 @@
      form  {
         background-color: white;
         padding: 40px;
+        padding-bottom: 1rem;
         box-shadow: 0 0 6px 0 rgb(055,055 ,055, 0.8);
         border-radius: 10px;
      
