--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,9 +1,11 @@
 footer{
-    background-color: whitesmoke;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    background-color: white;
+    padding-top:1rem ;
     margin-top: 2rem;
     width: 100%;
+    position: absolute;
+    bottom: 0;
+    
    
     .fa-instagram {
         @include redes ($ig);
