--- a/scss/layout/_niños.scss
+++ b/scss/layout/_niños.scss
@@ -1,6 +1,8 @@
 .bniños{
-   background-image: url("../imagenes/fondo\ de\ mi\ proyecto.webp");
-   background-size: cover;;
+background-color: lightgray;
+min-height: 100vh;
+position: relative;
+padding-bottom: 3rem;
 }
     .titulo_niños {
      font-size: 4rem;
@@ -17,14 +19,6 @@
     
     .titulo_niños:hover{
     
-    background-color: rgb(194, 71, 71);
+    background-color: lightgray;
     
-    }
-    
-    .img_niñxs {
-       @extend .img_niñxs
-    }
-    
-    .img_niñxs:hover {
-       box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
     }
