--- a/scss/layout/niñas.scss
+++ b/scss/layout/niñas.scss
@@ -1,6 +1,8 @@
 .bniñas {
-  background-image: url("../imagenes/fondo\ de\ mi\ proyecto.webp");
-  background-size: cover;
+background-color: lightgray;
+min-height: 100vh;
+position: relative;
+padding-bottom: 3rem;
 }
 
 .titulo_ellas {
@@ -15,15 +17,4 @@
 
 .titulo_ellas:hover {
   background-color: white;
-}
-
-.img_niñex {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 5px;
-  width: 350px;
-}
-
-.img_niñex:hover {
-  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
