--- a/scss/layout/_niños.scss
+++ b/scss/layout/_niños.scss
@@ -1,24 +1,24 @@
 .bniños{
-background-color: lightgray;
-min-height: 100vh;
-
-
-}
-    .titulo_niños {
-     font-size: 4rem;
-     font-family: $fontComfortaa;
-     width: 100%;
-     transition: 1s;
-     transition-property: all;
-     transition-timing-function: ease-in-out;  
-     color: map-get($mapa, $key:fondo );
+    background-color: rgb(235, 227, 227);
+    min-height: 100vh;
+    
     
     }
-    
- 
-    
-    .titulo_niños:hover{
-    
-    background-color: lightgray;
-    
-    }
+        .titulo_niños {
+         font-size: 4rem;
+         font-family: $fontComfortaa;
+         width: 100%;
+         transition: 1s;
+         transition-property: all;
+         transition-timing-function: ease-in-out;  
+         color: map-get($mapa, $key:fondo );
+        
+        }
+        
+     
+        
+        .titulo_niños:hover{
+        
+        background-color: white;
+        
+        }
