--- a/scss/layout/index.scss
+++ b/scss/layout/index.scss
@@ -1,19 +1,23 @@
 .bindex {
-  background-color: lightgray;
-  min-height: 100vh;
- 
-}     
+  
+    min-height: 100vh;
+    
+   
+  }    
+  img{      border-radius: 8px;
 
-.titulo_bienvenida {
-   font-size: 3rem;
-   font-family: $fontComfortaa;
-   width: 100%;
-   transition: 1s;
-   transition-property: all;
-   transition-timing-function: ease-in-out;
-   color: map-get($mapa, $key: fondo3);
-}
-
-.titulo_bienvenida:hover {
-   background-color: white;
-}
+  } 
+  
+  .titulo_bienvenida {
+     font-size: 3rem;
+     font-family: $fontComfortaa;
+     width: 100%;
+     transition: 1s;
+     transition-property: all;
+     transition-timing-function: ease-in-out;
+     color: map-get($mapa, $key: fondo3);
+  }
+  
+  .titulo_bienvenida:hover {
+     background-color: white;
+  }
