--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -4,6 +4,7 @@
 @import"./partials/maps";
 @import "./layout/navbar";
 @import"./layout/index";
+@import"./layout/img";
 @import"./layout/niñas";
 @import"./layout/niños";
 @import"./layout/nosotros";
