--- a/scss/layout/_nosotros.scss
+++ b/scss/layout/_nosotros.scss
@@ -1,22 +1,27 @@
 .bnosotros {
-  background-color: bisque;
-  min-height: 100vh;
-
-
-  .texto_historia {
-    font-size: 1.3rem;
+    background-color: bisque;
+    min-height: 100vh;
+  
+  
+    .texto_historia {
+      font-size: 1rem;
+    }
+  
+    .texto_historia:hover {
+      width: 100%;
+      background-color: white;
+      transition: 1s;
+      transition-property: all;
+      transition-timing-function: ease-in-out;
+    }
+  
+    p:hover {
+      background-color: beige
+    }
+    footer{
+        width: 100%;
+        height: auto;
+        
+    }
+  
   }
-
-  .texto_historia:hover {
-    width: 100%;
-    background-color: white;
-    transition: 1s;
-    transition-property: all;
-    transition-timing-function: ease-in-out;
-  }
-
-  p:hover {
-    background-color: beige
-  }
-
-}
