--- a/scss/partials/_mediaform.scss
+++ b/scss/partials/_mediaform.scss
@@ -1,10 +1,24 @@
-@media (min-width: 575.98px) {
+@media (max-width: 998px) {
  
-    .bmenu {
-    
-      overflow: auto;
-    }
-   
+   .bnosotros{ display: flex;
+  min-height: 100vh;
+flex-wrap: wrap;}
+footer{
+  align-self: flex-end;
+  justify-content: center;
+  height: 50px;
+}
+ }
+@media (max-width: 1200px) {
+ 
+  .bnosotros{ display: flex;
+ min-height: 100vh;
+flex-wrap: wrap;}
+footer{
+ align-self: flex-end;
+ justify-content: center;
+ height: 50px;
+}
     }
     @media (max-width:576px) {
 
