--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -157,9 +157,28 @@ footer .fa-facebook:hover {
   color: blue;
 }
 
-@media (min-width: 575.98px) {
-  .bmenu {
-    overflow: auto;
+@media (max-width: 998px) {
+  .bnosotros {
+    display: flex;
+    min-height: 100vh;
+    flex-wrap: wrap;
+  }
+  footer {
+    align-self: flex-end;
+    justify-content: center;
+    height: 50px;
+  }
+}
+@media (max-width: 1200px) {
+  .bnosotros {
+    display: flex;
+    min-height: 100vh;
+    flex-wrap: wrap;
+  }
+  footer {
+    align-self: flex-end;
+    justify-content: center;
+    height: 50px;
   }
 }
 @media (max-width: 576px) {
