--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -3,7 +3,7 @@ footer{
     padding-top: 1rem;
     margin-top: 2rem;
     width: 100%;
-  
+    bottom: 50;
     
    
     .fa-instagram {
@@ -17,3 +17,4 @@ footer{
       }
 
 }
+
