--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -4,6 +4,7 @@
 @import"./partials/maps";
 @import "./layout/navbar";
 @import"./layout/index";
+@import"./layout/hero";
 @import"./layout/img";
 @import"./layout/niñas";
 @import"./layout/niños";
@@ -11,3 +12,5 @@
 @import"./layout/contacto";
 @import"./layout/footer";
 @import"./partials/mediaform";
+@import"./partials/medias";
+
