--- a/scss/layout/_niños.scss
+++ b/scss/layout/_niños.scss
@@ -1,8 +1,8 @@
 .bniños{
     background-color: rgb(235, 227, 227);
+    width: 100%;
     min-height: 100vh;
-    
-    
+    font-size: 18px;
     }
         .titulo_niños {
          font-size: 4rem;
