--- a/scss/layout/_img.scss
+++ b/scss/layout/_img.scss
@@ -1,3 +1,15 @@
-.carousel-iner{
-        max-height: 35rem;
+img{
+    width: 20vw;
+    height: 20vh;
+}
+html{
+    height: 100%;
+}
+body{ 
+    width: 100vw;
+    height: 100vh;
+       }
+ 
+main{
+    min-height: 100vh;
 }
