--- a/scss/partials/_medias.scss
+++ b/scss/partials/_medias.scss
@@ -1,51 +1,63 @@
 @media (max-width: 575.98px) { 
-    
-   .logo-media{
-    font-size: 35px;
-  }
-  .alto-icono{
-    height: 15vh ;
-    width: 15vh;;
-  }
-  }
-  
-  @media (max-width: 767.98px) { 
-    .logo-media{
-      font-size: 35px;
+    img{
+        width: 20vw;
+        height: 20vh;
     }
+   h1{ font-size: 25px;
+   }
+   p{
+    font-size: 20px;
+   }
+ }
 
-  }
-  
-  
-  @media (max-width: 991.98px) { 
-  .logo-media{
-    font-size: 35px;
-  }
 
-  }
-  
-  @media (max-width: 1199.98px) { 
-    .alto-icono{
-        height: 30vh;
+@media (max-width: 767.98px) { 
+    img{
+        width: 20vw;
+        height: 20vh;
+    }
+    h1{ font-size: 25px;
+    }
+    p{
+        font-size: 20px;
+       }
+ }
+
+
+@media (max-width: 991.98px) { 
+    img{
+    width: 20vw;
+    height: 20vh;
+} 
+h1{ font-size: 30px;
+}
+p{
+    font-size: 25px;
+   }
+}
+
+@media (max-width: 1199.98px) { 
+    img{
         width: 30vw;
+        height: 30vh;
     }
-      .logo-media{
-        font-size: 35px;
-      }
-   
-  }
-  
-  @media (max-width: 1399.98px) {
-  .logo-media{
-    font-size: 40px;
-  }
- 
-  }
-  
-  @media (max-width: 2000px) {
-    .logo-media{
-      font-size: 40px;
+    h1{
+        font-size: 30px;
     }
-   
-   
+    p{
+        font-size: 25px;
+       }
+}
+
+
+@media (max-width: 1399.98px) { 
+    img{
+        width: 20vw;
+        height: 20vh;
     }
+    h1{ font-size: 30px;
+    }
+    p{
+        font-size: 25px;
+    }
+}
