--- a/scss/layout/_niños.scss
+++ b/scss/layout/_niños.scss
@@ -3,6 +3,7 @@
     width: 100%;
     min-height: 100vh;
     font-size: 18px;
+    overflow-x: hidden;
     }
         .titulo_niños {
          font-size: 4rem;
