--- a/scss/partials/_medias.scss
+++ b/scss/partials/_medias.scss
@@ -1,20 +1,11 @@
-@media (max-width: 575.98px) { 
-    img{
-        width: 20vw;
-        height: 20vh;
-    }
-   h1{ font-size: 25px;
-   }
-   p{
-    font-size: 20px;
-   }
- }
+
 
 
 @media (max-width: 767.98px) { 
-    img{
-        width: 20vw;
-        height: 20vh;
+    .img{
+        width: 40vw;
+        height: 35vh;
+    
     }
     h1{ font-size: 25px;
     }
@@ -26,9 +17,10 @@
 
 @media (max-width: 991.98px) { 
     img{
-    width: 20vw;
-    height: 20vh;
-} 
+        width: 40vw;
+        height: 35vh;
+
+        }
 h1{ font-size: 30px;
 }
 p{
@@ -38,8 +30,8 @@ p{
 
 @media (max-width: 1199.98px) { 
     img{
-        width: 30vw;
-        height: 30vh;
+        width: 40vw;
+        height: 35vh;
     }
     h1{
         font-size: 30px;
@@ -52,8 +44,8 @@ p{
 
 @media (max-width: 1399.98px) { 
     img{
-        width: 20vw;
-        height: 20vh;
+        width: 25vw;
+        height: 25vh;
     }
     h1{ font-size: 30px;
     }
@@ -61,3 +53,14 @@ p{
         font-size: 25px;
     }
 }
+@media (max-width: 575.98px) { 
+    .img{
+        width: 40vw;
+        height: 35vh;
+    }
+   h1{ font-size: 25px;
+   }
+   p{
+    font-size: 20px;
+   }
+ }
