--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,5 +1,5 @@
 footer{
-    background-color: rgb(230, 217, 217);
+    background-color: white;
     width: 100%;
     height: 100px;
     margin-top: 10px;
